test/files/neg/t3692-new.check
t3692-new.scala:17: warning: non-variable type argument Int in type pattern scala.collection.immutable.Map[Int,Int] (the underlying of Map[Int,Int]) is unchecked since it is eliminated by erasure
      case m0: Map[Int, Int] => new java.util.HashMap[Integer, Integer]
               ^
t3692-new.scala:18: warning: non-variable type argument Int in type pattern scala.collection.immutable.Map[Int,V] (the underlying of Map[Int,V]) is unchecked since it is eliminated by erasure
      case m1: Map[Int, V] => new java.util.HashMap[Integer, V]
               ^
t3692-new.scala:19: warning: non-variable type argument Int in type pattern scala.collection.immutable.Map[T,Int] (the underlying of Map[T,Int]) is unchecked since it is eliminated by erasure
      case m2: Map[T, Int] => new java.util.HashMap[T, Integer]
               ^
t3692-new.scala:18: warning: unreachable code
      case m1: Map[Int, V] => new java.util.HashMap[Integer, V]
                              ^
error: No warnings can be incurred under -Werror.
four warnings found
one error found
